- Updated the Forest tilest, namely adding path borders.
- Updated Farfetch'd's menu icon so it matches its overworld sprite more closely.
- Tweaked two or three overworld sprites.
- Tweaked the cutscene that plays when the player meets up with Lance at the Mahogany Mart.
- Renamed the Blackbelt item to "Black Belt", and fixed the spelling of "Elixer" to "Elixir".


1.2.3
- Updated a serious handful of menu icons, most of them courtesy of Twitter user Guiabel.
- Updated the overworld sprites of the Johto gym leaders, courtesy of TheBrawlUnit.
- Updated Jasmine's battle sprite, courtesy of SoupPotato.
- Restored the Goldenrod bargain rooftop sale, although with better item selection.
- Added the big Onix doll as a buyable item in Goldenrod after beating the League.
- Added a unique sprite for the tailless Slowpoke in Slowpoke Well's Team Rocket scenario.
- Added a little reference in the Copycat's room.
- Fixed a scripting oopsie in a late-game dungeon which made it impossible to traverse.
- Fixed a layout issue on Route 21.
- Fixed issue where the Officer Jenny in Vermilion City wasn't visible from Route 6.
- Implemented gift Pokémon scenario in Pallet Town. The Johto starter Pokémon the Rival chose can now be obtained after beating Red.


1.2.4
- Fixed vanilla issue with Tackle's impact graphic. Fix courtesy of SoupPotato.
- Fixed vanilla issue with the "running away from battle" sfx. Fix courtesy of SoupPotato.
- Fixed issue with incorrect hidden item in Seafoam Islands B4F.
- The puzzle in Lt.Surge's gym is now properly implemented. Huge thanks to Seasick, as always!
- The Waterfall HM is now no longer a missable item. The old HM07 itemball in Ice Path now contains a generic item.
- Fixed a small layout issue with the first floor of the Dragon's Den.
- Fixed a layout issue with both the entrances to the Seafoam Islands.
- Updated Jasmine's portrait in the Trainer Card.
- Reverted changes to Ledyba and Igglybuff's menu icons.